fix(progress): consistent spacing between label/icon & progress line (Vertical)

--- a/src/Progress/styles/index.less
+++ b/src/Progress/styles/index.less
@@ -161,6 +161,7 @@
   &&-vertical .rs-progress-info {
     flex-basis: auto;
     padding-left: 0;
+    padding-bottom: @progress-element-gap;
     width: auto;
   }
 
